--- a/app/src/main/res/layout/activity_two.xml
+++ b/app/src/main/res/layout/activity_two.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <Button
-        android:text="lesson1"
-        android:id="@+id/btn_pie"
-        android:layout_width="match_parent"
+    <com.example.dengjx.practicdraw.PraLinearGradientView
+        android:visibility="gone"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <Button
-        android:text="lesson2"
-        android:id="@+id/btn_two"
-        android:layout_width="match_parent"
+
+    <com.example.dengjx.practicdraw.PraMaskFilterView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
