--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,9 @@
         android:id="@+id/btn_two"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <Button
+        android:text="lesson3"
+        android:id="@+id/btn_three"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
