--- a/app/src/main/res/layout/activity_three.xml
+++ b/app/src/main/res/layout/activity_three.xml
@@ -3,8 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.example.dengjx.practicdraw.view.PraDrawPieView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+    <com.example.dengjx.practicdraw.view.PraDrawTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
