--- a/app/src/main/res/layout/activity_two.xml
+++ b/app/src/main/res/layout/activity_two.xml
@@ -4,12 +4,12 @@
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.example.dengjx.practicdraw.PraLinearGradientView
+    <com.example.dengjx.practicdraw.view.PraLinearGradientView
         android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <com.example.dengjx.practicdraw.PraMaskFilterView
+    <com.example.dengjx.practicdraw.view.PraMaskFilterView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
