--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,9 @@
         android:id="@+id/btn_three"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <Button
+        android:text="lesson4"
+        android:id="@+id/btn_four"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
