--- a/app/src/main/res/layout/activity_five.xml
+++ b/app/src/main/res/layout/activity_five.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <com.example.dengjx.practicdraw.view.PraDrawClipView
+    <com.example.dengjx.practicdraw.view.PraTextView
+        android:text="我们是共产主义接班人"
+        android:textSize="16sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
